--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-fontawesome": "^1.6.1",
-    "react-scroll-to-component": "^1.0.2"
+    "react-scroll-to-component": "^1.0.2",
+    "react-stickynode": "^1.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
