--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "react": "^16.0.0",
+    "react-burger-menu": "^2.2.3",
     "react-dom": "^16.0.0",
     "react-fontawesome": "^1.6.1",
     "react-scroll-to-component": "^1.0.2",
