--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react-dom": "^16.0.0",
     "react-fontawesome": "^1.6.1",
     "react-scroll-to-component": "^1.0.2",
-    "react-stickynode": "^1.4.1"
+    "react-slick": "^0.20.0",
+    "react-stickynode": "^1.4.1",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
